# tpDcc-libs-nameit

./: .buildinfo  .travis.yml  MANIFEST.in  README.md  README.rst  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tpDcc.html  tpDcc.libs.html  tpDcc.libs.nameit.core.html  tpDcc.libs.nameit.core.namelib.html  tpDcc.libs.nameit.html  tpDcc.libs.nameit.loader.html  tpDcc.libs.nameit.register.html
_sources/: tpDcc.libs.nameit.core.namelib.rst.txt  tpDcc.libs.nameit.core.rst.txt  tpDcc.libs.nameit.loader.rst.txt  tpDcc.libs.nameit.register.rst.txt  tpDcc.libs.nameit.rst.txt  tpDcc.libs.rst.txt  tpDcc.rst.txt
docs/sphinx/: conf.py
tests/: test_general.py
tpDcc/libs/nameit/: __init__.py  __logging__.ini  __version__.py  _version.py  loader.py  register.py
tpDcc/libs/nameit/core/: __init__.py  namelib.py
